--- a/force-app/main/default/classes/Test_ValitiveMonitoringEventTrigger.cls
+++ b/force-app/main/default/classes/Test_ValitiveMonitoringEventTrigger.cls
@@ -26,10 +26,31 @@ private class Test_ValitiveMonitoringEventTrigger {
                 LastName,
                 MailingStreet,
                 MailingCity,
-                MailingState,
+                MailingRegion__c,
                 MailingPostalCode,
                 MailingMunicipality__c
             FROM Contact WHERE Id = :contact.Id
+        ];
+    }
+
+    @IsTest
+    static void should_create_valitive_monitoring_event_when_account_is_created(){
+        mock.buildMockServer();
+        mock.addImportRequestPresponse();
+        Test.setMock(HttpCalloutMock.class, mock.mockServer);
+        Test.startTest();
+        Account account = new Account(
+            Name = 'Test Account',
+            Company_Number__c = '5561234567',
+            IsInMonitoringSet__c = true
+        );
+        insert account;
+        Test.stopTest();
+        account = [
+            SELECT 
+                Id,
+                Valitive_Import_Process_Status__c
+            FROM Account WHERE Id = :account.Id
         ];
     }
 
